fixed social media button overflow issue

--- a/css-styles/myStyles.css
+++ b/css-styles/myStyles.css
@@ -57,7 +57,7 @@ body {
     background-repeat: no-repeat ;
     position: relative;
     padding: 50px;
-    border-bottom: #bb6f27;
+    border-bottom: #fd7e14;
     border-bottom-style: groove;
 
 }
@@ -106,6 +106,10 @@ body {
 }
 
 @media screen and (max-width: 700px) {
+    .sidenav a {
+        padding: 13px;
+    }
+
     .sidenav {
         width: 100%;
         position: relative;
@@ -114,15 +118,19 @@ body {
     /* navigation buttons */
     .active {
         float: left;
+        padding: 14px;
     }
     .proj-page {
         float: left;
+        padding: 14px;
     }
     .ex-page {
         float: left;
+        padding: 14px;
     }
     .home {
         float: left;
+        padding: 14px;
     }
     .intro {
         margin-left: 0;
